--- a/index.html
+++ b/index.html
@@ -2,9 +2,106 @@
 <html>
 <head>
 	<title>T John Institute of Technology</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+	<nav class="navbar navbar-default" role="navigation">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#" title="T John Institute of Technology">T John Institute of Technology</a>
+			</div>
+
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse navbar-ex1-collapse">
+				<ul class="nav navbar-nav">
+					<li><a href="#">Alumini</a></li>
+					<li><a href="#">Campus Life</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a>UG</a></li>
+							<li><a href="#">Another action</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="#">Something else here</a></li>
+							<li><a href="#">Separated link</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Facilities</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Facilities<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Research</a></li>
+							<li><a href="#">Another action</a></li>
+							<li><a href="#">Something else here</a></li>
+							<li><a href="#">Separated link</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Placements</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">Contact Us</a></li>
+					<li><a href="#">About Us</a></li>
+					
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div>
+	</nav>
+
+
+	<!-- Slider -->
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+			<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+			<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+		</ol>
+
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner" role="listbox">
+			<div class="item active">
+				<img src="https://placehold.it/1600x500.jpg/ffc857/403f4c?text=T John Institute Of Technology" alt="...">
+				<div class="carousel-caption">
+				</div>
+			</div>
+			<div class="item">
+				<img src="https://placehold.it/1600x500.jpg/ffc857/403f4c?text=T John Institute Of Technology" alt="...">
+				<div class="carousel-caption">
+				</div>
+			</div>
+			<div class="item">
+				<img src="https://placehold.it/1600x500.jpg/ffc857/403f4c?text=T John Institute Of Technology" alt="...">
+				<div class="carousel-caption">
+				</div>
+			</div>
+		</div>
+
+		<!-- Controls -->
+		<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+
 	<h1>T John Institute of Technology</h1>
+
+
+
+	<footer></footer>
+	<script src="assets/js/jquery.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
