--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>T John Institute of Technology</title>
+	<meta charset="UTF-8">
+	<meta name="theme-color" content="#DA251C">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
 	<link rel="stylesheet" href="assets/css/style.css">
