Adds new section

--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
 		<!-- Wrapper for slides -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img src="assets/img/tjit-ground.jpg" alt="...">
-				<div class="carousel-caption">
-				</div>
-			</div>
-<!-- 			<div class="item">
-				<img src="https://placehold.it/1600x500.jpg/015198/fff?text=T John Institute Of Technology" alt="...">
+				<img src="assets/img/tjit-ground.jpg" alt="..." class="img img-responsive">
 				<div class="carousel-caption">
 				</div>
 			</div>
 			<div class="item">
+				<img src="assets/img/tjit-outside.jpg" alt="..." class="img img-responsive">
+				<div class="carousel-caption">
+				</div>
+			</div>
+<!-- 			<div class="item">
 				<img src="https://placehold.it/1600x500.jpg/015198/fff?text=T John Institute Of Technology" alt="...">
 				<div class="carousel-caption">
 				</div>
@@ -103,7 +103,7 @@
 		<div class="container">
 			<div class="row">		
 				<div class="col-sm-12">
-					<h1>T John Institute of Technology</h1>
+					<h1>T&nbspJohn Institute of Technology</h1>
 					<h2>Quality Education With a Global Perspective</h2>
 				</div>
 			</div>
@@ -139,13 +139,13 @@
 					<p>To impart science-based engineering education to develop professional skills that will prepare the students for immediate employment and provide them with a solid foundation for further education.</p>
 					<p>To create among students the curiosity, the desire and the ability to keep learning throughout life. Character building in students, so as to enable them to become responsible citizens and committed professionals.</p>
 				</div>
-				<div class="col-sm-6">
-					<img src="assets/img/girl-in-pink.jpg" alt="" class="img img-responsive">
+				<div class="col-sm-6 jumbo">
+					<img src="assets/img/cycle.jpg" alt="" class="img img-responsive">
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-6">
-					<img src="assets/img/girl-in-pink.jpg" alt="" class="img img-responsive">
+				<div class="col-sm-6 jumbo">
+					<img src="assets/img/cycle.jpg" alt="" class="img img-responsive">
 				</div>
 				<div class="col-sm-6 objective">
 					<p>To keep pace with changing times by providing quality education through value added courses, beyond the curriculum prescribed by the University.</p>
@@ -158,8 +158,8 @@
 					<p>To provide state-of-the art infrastructure for students to develop their skills</p>
 					<p>Have continuous association, involvement and partnership with the corporate world</p>
 				</div>
-				<div class="col-sm-6">
-					<img src="assets/img/girl-in-pink.jpg" alt="" class="img img-responsive">
+				<div class="col-sm-6 jumbo">
+					<img src="assets/img/cycle.jpg" alt="" class="img img-responsive">
 				</div>
 			</div>
 		</section>
@@ -187,6 +187,10 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident laboriosam ratione maxime quaerat incidunt molestiae, iusto odio temporibus eius ipsam.</p>
 				</div>
 				<div class="col-sm-3">
+					<p class="title">About</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sit modi explicabo illum. Modi voluptatibus iste ut minima temporibus perspiciatis?</p>
+				</div>	
+				<div class="col-sm-3">
 					<p class="title">Socialize</p>
 					<ul>
 						<li><a href="">Link Here 1</a></li>
@@ -196,14 +200,15 @@
 					</ul>
 				</div>
 				<div class="col-sm-3">
-					<p class="title">About</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sit modi explicabo illum. Modi voluptatibus iste ut minima temporibus perspiciatis?</p>
-				</div>	
-				<div class="col-sm-3">
 					<p class="title">Contact</p>
-					<p>Lorem ipsum dolor</p>
-					<p>Lorem ipsum</p>
-					<p>Lorem ipsum dolor sit</p>
+					<p>
+						Address line 1 <br>
+						Address line 2 <br>
+						address line 3 <br>
+						PIN Number <br>
+						Phone : +91-999-000-11-22
+					</p>
+					
 				</div>
 			</div>
 			<div class="row">
