Changes objective photos

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 		<!-- Wrapper for slides -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img src="assets/img/tjit-ground.jpg" alt="..." class="img img-responsive">
+				<img src="assets/img/classroom-girl.jpg" alt="..." class="img img-responsive">
 				<div class="carousel-caption">
 				</div>
 			</div>
 			<div class="item">
-				<img src="assets/img/tjit-outside.jpg" alt="..." class="img img-responsive">
+				<img src="assets/img/classroom-girl.jpg" alt="..." class="img img-responsive">
 				<div class="carousel-caption">
 				</div>
 			</div>
@@ -140,12 +140,12 @@
 					<p>To create among students the curiosity, the desire and the ability to keep learning throughout life. Character building in students, so as to enable them to become responsible citizens and committed professionals.</p>
 				</div>
 				<div class="col-sm-6 jumbo">
-					<img src="assets/img/cycle.jpg" alt="" class="img img-responsive">
+					<img src="assets/img/reading-girl.jpg" alt="" class="img img-responsive">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-6 jumbo">
-					<img src="assets/img/cycle.jpg" alt="" class="img img-responsive">
+					<img src="assets/img/reading-girl.jpg" alt="" class="img img-responsive">
 				</div>
 				<div class="col-sm-6 objective">
 					<p>To keep pace with changing times by providing quality education through value added courses, beyond the curriculum prescribed by the University.</p>
@@ -159,7 +159,7 @@
 					<p>Have continuous association, involvement and partnership with the corporate world</p>
 				</div>
 				<div class="col-sm-6 jumbo">
-					<img src="assets/img/cycle.jpg" alt="" class="img img-responsive">
+					<img src="assets/img/reading-girl.jpg" alt="" class="img img-responsive">
 				</div>
 			</div>
 		</section>
