--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 							<li><a href="">Electronics &amp; Communication Engineering</a></li>
 							<li><a href="">Mechanical Engineering</a></li>
 							<li><a href="">Civil Engineering</a></li>
+							<li role="separator" class="divider"></li>
 							<li><a href="">Basic Science</a></li>
 							<li><a href="">Library Information Centre</a></li>
 						</ul>
@@ -114,12 +115,17 @@
 		<!-- Wrapper for slides -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img src="assets/img/tjit-ground.jpg" alt="..." class="img img-responsive">
+				<img src="assets/img/tjohnlogo-slide.jpg" alt="..." class="img img-responsive">
 				<div class="carousel-caption">
 				</div>
 			</div>
 			<div class="item">
 				<img src="assets/img/classroom-girl.jpg" alt="..." class="img img-responsive">
+				<div class="carousel-caption">
+				</div>
+			</div>
+			<div class="item">
+				<img src="assets/img/tjit-ground.jpg" alt="..." class="img img-responsive">
 				<div class="carousel-caption">
 				</div>
 			</div>
