--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		<div class="container">
 			<div class="row">		
 				<div class="col-sm-12">
-					<h1>T&nbspJohn Institute of Technology</h1>
+					<h1>T&nbspJohn Institute of Technology, Bangalore</h1>
 					<h2>Quality Education With a Global Perspective</h2>
 				</div>
 			</div>
