--- a/index.html
+++ b/index.html
@@ -385,80 +385,68 @@
 	</section>
 
 	<section id="recent-placements">
-		<h2 class="section-head">Recent Placements</h2>
 		<div class="container">
+		<h2 class="section-head">Recent Placements</h2>
 			<div class="row">
-				<div class="col-sm-1">
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="course"></p>
-					<p class="company"></p>
+				<div class="col-sm-1 col-sm-offset-1 placed">
+					<img src="assets/img/avatars/girl1.jpg" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-1">
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="course"></p>
-					<p class="company"></p>
+				<div class="col-sm-1 placed">
+					<img src="assets/img/avatars/girl2.jpg" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-1">
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="course"></p>
-					<p class="company"></p>
+				<div class="col-sm-1 placed">
+					<img src="assets/img/avatars/girl1.jpg" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-1">
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="course"></p>
-					<p class="company"></p>
+				<div class="col-sm-1 placed">
+					<img src="assets/img/avatars/girl2.jpg" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-1">
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="course"></p>
-					<p class="company"></p>
+				<div class="col-sm-1 placed">
+					<img src="assets/img/avatars/girl1.jpg" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-1">
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="course"></p>
-					<p class="company"></p>
+				<div class="col-sm-1 placed">
+					<img src="assets/img/avatars/girl2.jpg" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-1">
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="course"></p>
-					<p class="company"></p>
+				<div class="col-sm-1 placed">
+					<img src="assets/img/avatars/girl1.jpg" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-1">
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="course"></p>
-					<p class="company"></p>
+				<div class="col-sm-1 placed">
+					<img src="assets/img/avatars/girl2.jpg" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-1">
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="course"></p>
-					<p class="company"></p>
+				<div class="col-sm-1 placed">
+					<img src="assets/img/avatars/girl1.jpg" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-1">
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="course"></p>
-					<p class="company"></p>
-				</div>
-				<div class="col-sm-1">
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="course"></p>
-					<p class="company"></p>
-				</div>
-				<div class="col-sm-1">
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="course"></p>
-					<p class="company"></p>
+				<div class="col-sm-1 placed">
+					<img src="assets/img/avatars/girl2.jpg" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
 			</div>
 		</div>
