adds white bgc to placed

--- a/index.html
+++ b/index.html
@@ -386,67 +386,87 @@
 
 	<section id="recent-placements">
 		<div class="container">
-		<h2 class="section-head">Recent Placements</h2>
+			<h2 class="section-head">Recent Placements</h2>
 			<div class="row">
 				<div class="col-sm-1 col-sm-offset-1 placed">
-					<img src="assets/img/avatars/girl1.jpg" alt="">
-					<p class="name">FirstName</p>
-					<p class="course">BE-CS</p>
-					<p class="company">Samsung</p>
+					<div>
+						<img src="assets/img/avatars/girl1.jpg" alt="">
+						<p class="name">FirstName</p>
+						<p class="course">BE-CS</p>
+						<p class="company">Samsung</p>
+					</div>
 				</div>
 				<div class="col-sm-1 placed">
-					<img src="assets/img/avatars/girl2.jpg" alt="">
-					<p class="name">FirstName</p>
-					<p class="course">BE-CS</p>
-					<p class="company">Samsung</p>
+					<div>
+						<img src="assets/img/avatars/girl2.jpg" alt="">
+						<p class="name">FirstName</p>
+						<p class="course">BE-CS</p>
+						<p class="company">Samsung</p>
+					</div>
 				</div>
 				<div class="col-sm-1 placed">
-					<img src="assets/img/avatars/girl1.jpg" alt="">
-					<p class="name">FirstName</p>
-					<p class="course">BE-CS</p>
-					<p class="company">Samsung</p>
+					<div>
+						<img src="assets/img/avatars/girl1.jpg" alt="">
+						<p class="name">FirstName</p>
+						<p class="course">BE-CS</p>
+						<p class="company">Samsung</p>
+					</div>
 				</div>
 				<div class="col-sm-1 placed">
-					<img src="assets/img/avatars/girl2.jpg" alt="">
-					<p class="name">FirstName</p>
-					<p class="course">BE-CS</p>
-					<p class="company">Samsung</p>
+					<div>
+						<img src="assets/img/avatars/girl2.jpg" alt="">
+						<p class="name">FirstName</p>
+						<p class="course">BE-CS</p>
+						<p class="company">Samsung</p>
+					</div>
 				</div>
 				<div class="col-sm-1 placed">
-					<img src="assets/img/avatars/girl1.jpg" alt="">
-					<p class="name">FirstName</p>
-					<p class="course">BE-CS</p>
-					<p class="company">Samsung</p>
+					<div>
+						<img src="assets/img/avatars/girl1.jpg" alt="">
+						<p class="name">FirstName</p>
+						<p class="course">BE-CS</p>
+						<p class="company">Samsung</p>
+					</div>
 				</div>
 				<div class="col-sm-1 placed">
-					<img src="assets/img/avatars/girl2.jpg" alt="">
-					<p class="name">FirstName</p>
-					<p class="course">BE-CS</p>
-					<p class="company">Samsung</p>
+					<div>
+						<img src="assets/img/avatars/girl2.jpg" alt="">
+						<p class="name">FirstName</p>
+						<p class="course">BE-CS</p>
+						<p class="company">Samsung</p>
+					</div>
 				</div>
 				<div class="col-sm-1 placed">
-					<img src="assets/img/avatars/girl1.jpg" alt="">
-					<p class="name">FirstName</p>
-					<p class="course">BE-CS</p>
-					<p class="company">Samsung</p>
+					<div>
+						<img src="assets/img/avatars/girl1.jpg" alt="">
+						<p class="name">FirstName</p>
+						<p class="course">BE-CS</p>
+						<p class="company">Samsung</p>
+					</div>
 				</div>
 				<div class="col-sm-1 placed">
-					<img src="assets/img/avatars/girl2.jpg" alt="">
-					<p class="name">FirstName</p>
-					<p class="course">BE-CS</p>
-					<p class="company">Samsung</p>
+					<div>
+						<img src="assets/img/avatars/girl2.jpg" alt="">
+						<p class="name">FirstName</p>
+						<p class="course">BE-CS</p>
+						<p class="company">Samsung</p>
+					</div>
 				</div>
 				<div class="col-sm-1 placed">
-					<img src="assets/img/avatars/girl1.jpg" alt="">
-					<p class="name">FirstName</p>
-					<p class="course">BE-CS</p>
-					<p class="company">Samsung</p>
+					<div>
+						<img src="assets/img/avatars/girl1.jpg" alt="">
+						<p class="name">FirstName</p>
+						<p class="course">BE-CS</p>
+						<p class="company">Samsung</p>
+					</div>
 				</div>
 				<div class="col-sm-1 placed">
-					<img src="assets/img/avatars/girl2.jpg" alt="">
-					<p class="name">FirstName</p>
-					<p class="course">BE-CS</p>
-					<p class="company">Samsung</p>
+					<div>
+						<img src="assets/img/avatars/girl2.jpg" alt="">
+						<p class="name">FirstName</p>
+						<p class="course">BE-CS</p>
+						<p class="company">Samsung</p>
+					</div>
 				</div>
 			</div>
 		</div>
