styles blog section

--- a/index.html
+++ b/index.html
@@ -358,26 +358,32 @@
 			<div class="row">
 				<div class="col-sm-4 blog">
 					<article>
-						<img src="" alt="" class="cover">
-						<h3 class="title"></h3>
-						<p class="brief"></p>
-						<a href="" class="readmore"></a>
+						<img src="assets/img/covers/cover1.jpg" alt="" class="cover">
+						<div class="details">
+							<h3 class="title">Long long title goes here</h3>
+							<p class="brief">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt odit fugit ab quisquam laudantium expedita, esse delectus maxime nobis facilis?</p>
+							<a href="" class="readmore">Read More</a>
+						</div>
 					</article>
 				</div>
 				<div class="col-sm-4 blog">
 					<article>
-						<img src="" alt="" class="cover">
-						<h3 class="title"></h3>
-						<p class="brief"></p>
-						<a href="" class="readmore"></a>
+						<img src="assets/img/covers/cover1.jpg" alt="" class="cover">
+						<div class="details">
+							<h3 class="title">Long long title goes here</h3>
+							<p class="brief">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt odit fugit ab quisquam laudantium expedita, esse delectus maxime nobis facilis?</p>
+							<a href="" class="readmore">Read More</a>
+						</div>
 					</article>
 				</div>
 				<div class="col-sm-4 blog">
 					<article>
-						<img src="" alt="" class="cover">
-						<h3 class="title"></h3>
-						<p class="brief"></p>
-						<a href="" class="readmore"></a>
+						<img src="assets/img/covers/cover1.jpg" alt="" class="cover">
+						<div class="details">
+							<h3 class="title">Long long title goes here</h3>
+							<p class="brief">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt odit fugit ab quisquam laudantium expedita, esse delectus maxime nobis facilis?</p>
+							<a href="" class="readmore">Read More</a>
+						</div>
 					</article>
 				</div>
 			</div>
@@ -475,7 +481,7 @@
 	<section id="quick-contact">
 		<div class="container">
 			<form action="">
-			
+
 			</form>
 		</div>
 	</section>
