styles courses section

--- a/index.html
+++ b/index.html
@@ -237,20 +237,22 @@
 		</div>
 	</section>
 
-	<section id="cources">
-		<h2 class="section-head">Coures Offered</h2>
+	<section id="courses-offered">
+		<!-- <h2 class="section-head">Coures Offered</h2> -->
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6">
 					<div class="course">
 						<h3>Bachelor Of Engineering</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, ea, non id odio odit distinctio expedita reiciendis tempore possimus delectus tenetur ipsam optio quidem consequatur cupiditate amet aut ipsum earum.</p>
+						<a href="">Find More</a>
 					</div>
 				</div>
 				<div class="col-sm-6">
 					<div class="course">
 						<h3>Masters Of Engineering</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nisi facere recusandae voluptatibus, perferendis saepe at tenetur quis quae voluptas, iste incidunt doloribus enim? Neque laborum saepe, nemo sit velit.</p>
+						<a href="">Find More</a>
 					</div>
 				</div>
 			</div>
@@ -300,22 +302,22 @@
 	</section>
 
 	<section id="achievements">
-		<h2 class="section-head">Achievements</h2>
+		<!-- <h2 class="section-head">Achievements</h2> -->
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-3 achievement">
+				<div class="col-sm-3 col-xs-6 achievement">
 					<p class="num">250+</p>
 					<p class="title">Guest Seminars</p>
 				</div>
-				<div class="col-sm-3 achievement">
+				<div class="col-sm-3 col-xs-6 achievement">
 					<p class="num">25+</p>
 					<p class="title">International Workshops</p>
 				</div>
-				<div class="col-sm-3 achievement">
+				<div class="col-sm-3 col-xs-6 achievement">
 					<p class="num">50+</p>
 					<p class="title">Experienced Faculties</p>
 				</div>
-				<div class="col-sm-3 achievement">
+				<div class="col-sm-3 col-xs-6 achievement">
 					<p class="num">60+</p>
 					<p class="title">Digital Classrooms</p>
 				</div>
@@ -394,7 +396,7 @@
 		<div class="container">
 			<h2 class="section-head">Recent Placements</h2>
 			<div class="row">
-				<div class="col-sm-1 col-sm-offset-1 placed">
+				<div class="col-sm-1 col-xs-3 col-sm-offset-1 placed">
 					<div>
 						<img src="assets/img/avatars/girl1.jpg" alt="">
 						<p class="name">FirstName</p>
@@ -402,7 +404,7 @@
 						<p class="company">Samsung</p>
 					</div>
 				</div>
-				<div class="col-sm-1 placed">
+				<div class="col-sm-1 col-xs-3 placed">
 					<div>
 						<img src="assets/img/avatars/girl2.jpg" alt="">
 						<p class="name">FirstName</p>
@@ -410,7 +412,7 @@
 						<p class="company">Samsung</p>
 					</div>
 				</div>
-				<div class="col-sm-1 placed">
+				<div class="col-sm-1 col-xs-3 placed">
 					<div>
 						<img src="assets/img/avatars/girl1.jpg" alt="">
 						<p class="name">FirstName</p>
@@ -418,7 +420,7 @@
 						<p class="company">Samsung</p>
 					</div>
 				</div>
-				<div class="col-sm-1 placed">
+				<div class="col-sm-1 col-xs-3 placed">
 					<div>
 						<img src="assets/img/avatars/girl2.jpg" alt="">
 						<p class="name">FirstName</p>
@@ -426,7 +428,7 @@
 						<p class="company">Samsung</p>
 					</div>
 				</div>
-				<div class="col-sm-1 placed">
+				<div class="col-sm-1 col-xs-3 placed">
 					<div>
 						<img src="assets/img/avatars/girl1.jpg" alt="">
 						<p class="name">FirstName</p>
@@ -434,7 +436,7 @@
 						<p class="company">Samsung</p>
 					</div>
 				</div>
-				<div class="col-sm-1 placed">
+				<div class="col-sm-1 col-xs-3 placed">
 					<div>
 						<img src="assets/img/avatars/girl2.jpg" alt="">
 						<p class="name">FirstName</p>
@@ -442,7 +444,7 @@
 						<p class="company">Samsung</p>
 					</div>
 				</div>
-				<div class="col-sm-1 placed">
+				<div class="col-sm-1 col-xs-3 placed">
 					<div>
 						<img src="assets/img/avatars/girl1.jpg" alt="">
 						<p class="name">FirstName</p>
@@ -450,7 +452,7 @@
 						<p class="company">Samsung</p>
 					</div>
 				</div>
-				<div class="col-sm-1 placed">
+				<div class="col-sm-1 col-xs-3 placed">
 					<div>
 						<img src="assets/img/avatars/girl2.jpg" alt="">
 						<p class="name">FirstName</p>
@@ -458,7 +460,7 @@
 						<p class="company">Samsung</p>
 					</div>
 				</div>
-				<div class="col-sm-1 placed">
+				<div class="col-sm-1 col-xs-3 placed">
 					<div>
 						<img src="assets/img/avatars/girl1.jpg" alt="">
 						<p class="name">FirstName</p>
@@ -466,7 +468,7 @@
 						<p class="company">Samsung</p>
 					</div>
 				</div>
-				<div class="col-sm-1 placed">
+				<div class="col-sm-1 col-xs-3 placed">
 					<div>
 						<img src="assets/img/avatars/girl2.jpg" alt="">
 						<p class="name">FirstName</p>
