adds trusted partner's section

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 	</section>
 
 	<section id="courses-offered">
-		<!-- <h2 class="section-head">Coures Offered</h2> -->
+		<h2 class="section-head">Coures Offered</h2>
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6">
@@ -264,24 +264,28 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-3 faculty">
-					<h3></h3>
-					<p class="deg"></p>
-					<p class="exp"></p>
+					<img src="" alt="">
+					<h3>Faculty Name 1</h3>
+					<p class="deg">BE, ME, PHP</p>
+					<p class="exp">12 Years Experience</p>
 				</div>
 				<div class="col-sm-3 faculty">
-					<h3></h3>
-					<p class="deg"></p>
-					<p class="exp"></p>
+					<img src="" alt="">
+					<h3>Faculty Name 2</h3>
+					<p class="deg">BE, ME, PHP</p>
+					<p class="exp">12 Years Experiance</p>
 				</div>
 				<div class="col-sm-3 faculty">
-					<h3></h3>
-					<p class="deg"></p>
-					<p class="exp"></p>
+					<img src="" alt="">
+					<h3>Faculty Name 3</h3>
+					<p class="deg">BE, ME, PHP</p>
+					<p class="exp">12 Years Experiance</p>
 				</div>
 				<div class="col-sm-3 faculty">
-					<h3></h3>
-					<p class="deg"></p>
-					<p class="exp"></p>
+					<img src="" alt="">
+					<h3>Faculty Name 4</h3>
+					<p class="deg">BE, ME, PHP</p>
+					<p class="exp">12 Years Experiance</p>
 				</div>
 			</div>	
 		</div>
@@ -291,12 +295,12 @@
 		<h2 class="section-head">Trusted Partners</h2>
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-2 partner"><img src="" alt=""></div>
-				<div class="col-sm-2 partner"><img src="" alt=""></div>
-				<div class="col-sm-2 partner"><img src="" alt=""></div>
-				<div class="col-sm-2 partner"><img src="" alt=""></div>
-				<div class="col-sm-2 partner"><img src="" alt=""></div>
-				<div class="col-sm-2 partner"><img src="" alt=""></div>
+				<div class="col-sm-2 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
+				<div class="col-sm-2 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
+				<div class="col-sm-2 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
+				<div class="col-sm-2 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
+				<div class="col-sm-2 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
+				<div class="col-sm-2 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
 			</div>
 		</div>
 	</section>
