adds responsive classes to faculties dnd partners

--- a/index.html
+++ b/index.html
@@ -263,25 +263,25 @@
 		<h2 class="section-head">Our Great Faculties</h2>
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-3 faculty">
+				<div class="col-sm-3 col-xs-6 faculty">
 					<img src="" alt="">
 					<h3>Faculty Name 1</h3>
 					<p class="deg">BE, ME, PHP</p>
 					<p class="exp">12 Years Experience</p>
 				</div>
-				<div class="col-sm-3 faculty">
+				<div class="col-sm-3 col-xs-6 faculty">
 					<img src="" alt="">
 					<h3>Faculty Name 2</h3>
 					<p class="deg">BE, ME, PHP</p>
 					<p class="exp">12 Years Experiance</p>
 				</div>
-				<div class="col-sm-3 faculty">
+				<div class="col-sm-3 col-xs-6 faculty">
 					<img src="" alt="">
 					<h3>Faculty Name 3</h3>
 					<p class="deg">BE, ME, PHP</p>
 					<p class="exp">12 Years Experiance</p>
 				</div>
-				<div class="col-sm-3 faculty">
+				<div class="col-sm-3 col-xs-6 faculty">
 					<img src="" alt="">
 					<h3>Faculty Name 4</h3>
 					<p class="deg">BE, ME, PHP</p>
@@ -295,12 +295,12 @@
 		<h2 class="section-head">Trusted Partners</h2>
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-2 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
-				<div class="col-sm-2 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
-				<div class="col-sm-2 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
-				<div class="col-sm-2 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
-				<div class="col-sm-2 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
-				<div class="col-sm-2 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
+				<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
+				<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
+				<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
+				<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
+				<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
+				<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
 			</div>
 		</div>
 	</section>
