changes order and styles testimonial

--- a/index.html
+++ b/index.html
@@ -259,6 +259,30 @@
 		</div>
 	</section>
 
+	<section id="achievements">
+		<!-- <h2 class="section-head">Achievements</h2> -->
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-3 col-xs-6 achievement">
+					<p class="num">250+</p>
+					<p class="title">Guest Seminars</p>
+				</div>
+				<div class="col-sm-3 col-xs-6 achievement">
+					<p class="num">25+</p>
+					<p class="title">International Workshops</p>
+				</div>
+				<div class="col-sm-3 col-xs-6 achievement">
+					<p class="num">50+</p>
+					<p class="title">Experienced Faculties</p>
+				</div>
+				<div class="col-sm-3 col-xs-6 achievement">
+					<p class="num">60+</p>
+					<p class="title">Digital Classrooms</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<section id="faculties">
 		<h2 class="section-head">Our Great Faculties</h2>
 		<div class="container">
@@ -305,35 +329,11 @@
 		</div>
 	</section>
 
-	<section id="achievements">
-		<!-- <h2 class="section-head">Achievements</h2> -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-3 col-xs-6 achievement">
-					<p class="num">250+</p>
-					<p class="title">Guest Seminars</p>
-				</div>
-				<div class="col-sm-3 col-xs-6 achievement">
-					<p class="num">25+</p>
-					<p class="title">International Workshops</p>
-				</div>
-				<div class="col-sm-3 col-xs-6 achievement">
-					<p class="num">50+</p>
-					<p class="title">Experienced Faculties</p>
-				</div>
-				<div class="col-sm-3 col-xs-6 achievement">
-					<p class="num">60+</p>
-					<p class="title">Digital Classrooms</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
 	<section id="testimonials">
 		<h2 class="section-head">What Our Students Say</h2>
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6 col-sm-offset-3">
+				<div class="col-sm-6 slider">
 					<div class="carousel slide" data-ride="carousel">
 						<div class="carousel-inner" role="listbox">
 							<div class="item testimonial active">
@@ -342,17 +342,20 @@
 								<p class="course">Course Name 1</p>
 							</div>
 							<div class="item testimonial">
-								<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas maxime officia quam nemo, amet quibusdam distinctio at incidunt deserunt.</p>
+								<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas maxime officia quam nemo.</p>
 								<h5>Awesome Student Name 2</h5>
 								<p class="course">Course Name 2</p>
 							</div>
 							<div class="item testimonial">
-								<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque eos distinctio minus quam velit consequuntur delectus dolore est minima impedit sequi cum beatae quaerat possimus molestias reprehenderit, fuga assumenda, placeat.</p>
+								<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque eos distinctio minus .</p>
 								<h5>Awesome Student Name 3</h5>
 								<p class="course">Course Name 3</p>
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="col-sm-6 students-container">
+					<img src="assets/img/student-testimonial.jpg" alt="" class="students">
 				</div>
 			</div>
 		</div>
